objects/Total_Customer_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>TCE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Year_Score__c</fullName>
        <label>Current Year Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_TCE_METRICS__c</fullName>
        <inlineHelpText>Measure of a specific experience or multiple experiences over time with HP</inlineHelpText>
        <label>HP TCE METRICS</label>
        <picklist>
            <picklistValues>
                <fullName>EG - Trusted Partner Index</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EG - Account Loyalty Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES - Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW - Customer Loyalty Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW - Net Promoter Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS - Printing Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS - Computing Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS - Customer Loyalty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Customer_Concerns_Issues__c</fullName>
        <label>Main Customer Concerns/Issues</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Score__c</fullName>
        <label>Previous Year Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_to_Address_Concerns_Issues__c</fullName>
        <label>Strategy to Address Concerns/Issues</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Total Customer Experience</label>
    <nameField>
        <displayFormat>TCE-{000}</displayFormat>
        <label>Total Customer Experience</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Customer Experience</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>